--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
         <ul class="card-overview">
           <li class="card-overview__item">
             <figure class="teaser" >
-              <div class="slide-show" data-js-slide-show="[data-slide]">
+              <div class="slide-show" data-js-slide-show="[data-slide]" data-slide-show = '{ "wrapAround": true }'>
                 <div>
                   <img src="./images/maiwoche-m.jpg" alt="Maiwoche" class="teaser__image slide-show__slide" data-js-slide>
                   <img src="./images/maiwoche-marktplatz-m.jpg" alt="Maiwoche Marktplatz" class="teaser__image slide-show__slide" data-js-slide>
